# otus-cpp-hw

./: CMakeLists.txt  main.cpp  test_version.cpp
.github/workflows/: release.yml
